Kubernetes/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      containers:
      - name: php-app
        image: rizvifarheen133688/tours-and-travels-in-php-master-web:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: php-storage
          mountPath: /var/www/html/storage  # Adjust this path based on your app's needs
      volumes:
      - name: php-storage
        persistentVolumeClaim:
          claimName: php-app-pvc
