Kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-app-service
spec:
  selector:
    app: php-app
  ports:
    - protocol: TCP
      port: 8081        # This is the port the service listens on
      targetPort: 80    # This is the port your container listens on
      nodePort: 30081  
  type: NodePort        # You can change this to ClusterIP if you're using Ingress
